# marching-cubes-gpu

./: Cargo.toml  README.md
assets/shaders/: simplex.wgsl  voxels.wgsl
src/: camera.rs  lut.rs  main.rs  marching_cubes_cpu.rs  marching_cubes_gpu.rs  voxel.rs
