[package]
name = "marching-cubes-gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.0"
bevy_rapier3d = "0.27.0"
bytemuck = "1.16.1"
wgpu = { version = "0.20", default-features = false, features = [
    "wgsl",
    "dx12",
    "metal",
    "naga",
    "naga-ir",
    "fragile-send-sync-non-atomic-wasm",
] }
